[AE-938] Apply yarn-cluster mode for HiveContext API